# tabular-semantic-search-tutorial

./: .env.example  .gitignore  INSTALL_AND_USAGE.md  Makefile  README.md  config.yaml  docker-compose.yml  pyproject.toml
superlinked_app/: __init__.py  api.py  config.py  index.py  nlq.py  query.py  server.py
tools/: streamlit_app.py
