[project]
name = "product_search"
version = "0.1.0"
description = "Semantic search on top of Amazon products using Superlinked as vector compute."
readme = "README.md"
requires-python = "~=3.11"
dependencies = [
    "altair>=5.5.0",
    "ipykernel>=6.29.5",
    "loguru>=0.7.3",
    "nbformat>=5.10.4",
    "pydantic-settings>=2.6.1",
    "qdrant-client>=1.7.0",
    "superlinked-server>=1.56.0",
    "superlinked==37.3.0",
    "zstandard>=0.23.0",
    "sqlalchemy>=2.0.36",
    "matplotlib>=3.9.3",
    "streamlit>=1.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.7.2",
]
